fix css alignment using javascript
fixed result display in the index html using javascript
by changing css rules in code depending on the current state
of the game

--- a/styles.css
+++ b/styles.css
@@ -37,4 +37,5 @@ button{
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-content: space-around;
 }
